--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ djangorestframework==3.11.0
 gunicorn==20.0.4
 Markdown==3.2.2
 Pillow==7.1.2
+psycopg2==2.8.5
 psycopg2-binary==2.8.5
 pytz==2020.1
 six==1.15.0
